# my_cosmos

./: .gitignore  COLAB_DEEPGHS.md  README.md  TODO.md  pyproject.toml
configs/: colab_l4.yaml  colab_l4_fa2_24gb.yaml  colab_l4_fa2_deepghs.yaml  colab_l4_rolling.yaml  colab_t4.yaml  colab_t4_rolling.yaml  cosmos_08b_anime.yaml  smoke.yaml
docs/: COLAB.md  L4_FA2.md
notebooks/: colab_rolling_train.ipynb
scripts/: benchmark_l4_attention.py  bootstrap_deepghs_colab.py  cache_latents.py  colab_encode_shards.py  colab_preflight.py  extract_t5gemma_encoder.py  gpu_smoke.py  inspect_model.py  list_hf_shards.py  prepare_deepghs_metadata.py  prepare_manifest.py  sample.py  train.py
src/my_sd/: __init__.py  config.py
src/my_sd/autoencoders/: __init__.py  wan_vae.py
src/my_sd/data/: __init__.py  buckets.py  captions.py  deepghs_metadata.py  latent_dataset.py  raw_stream.py  tar_stream.py
src/my_sd/encoders/: __init__.py  text.py
src/my_sd/models/: __init__.py  cosmos_dit.py  loading.py  text_adapter.py
src/my_sd/training/: __init__.py  checkpoints.py  flow_matching.py  optimizers.py  precision.py  preflight.py  preview.py  sampling.py  text_cache.py
tests/: test_bootstrap.py  test_buckets.py  test_captions.py  test_checkpoint_loading.py  test_checkpoints.py  test_colab_notebook.py  test_config.py  test_flow_matching.py  test_http_prefetch.py  test_list_hf_shards.py  test_metadata_partitions.py  test_model.py  test_optimizers.py  test_precision.py  test_preflight.py  test_preview.py  test_raw_stream.py  test_sampling.py  test_tar_stream.py  test_text_cache.py  test_train_cli.py  test_wan_vae.py  test_wandb.py
