[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cosmos-anime"
version = "0.1.0"
description = "A Cosmos-Predict2-style anime image diffusion model for a single 22 GB GPU."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
  "einops>=0.8",
  "numpy>=1.26",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "huggingface_hub>=0.30",
  "safetensors>=0.4.5",
  "torch==2.9.0; platform_system == 'Linux'",
  "torch>=2.5; platform_system != 'Linux'",
  "transformers>=5.0",
  "tqdm>=4.66",
]

[project.optional-dependencies]
train = [
  "bitsandbytes>=0.45; platform_system != 'Windows'",
  "tensorboard>=2.18",
]
fa2 = [
  "flash-attn==2.8.3; platform_system == 'Linux'",
  "ninja>=1.11",
  "packaging>=24",
  "psutil>=6",
]
test = [
  "pytest>=8.0",
]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu128", marker = "platform_system == 'Linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.dependency-metadata]]
name = "flash-attn"
requires-dist = ["torch", "einops"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
